<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.newhdc.pedergb.pozzum_20.MainActivity"
android:background="@color/colorBackground"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:fontFamily="monospace"
        android:text="@string/txtWelcome"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="11sp" />


    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/inputUsername"
        android:textColorHint="@color/colorTextWhite"
        android:textColor="@color/colorPrimaryLighter"
        android:layout_marginRight="31dp"
        android:layout_marginEnd="31dp"
        android:layout_below="@+id/imageView2"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputUsername"
        android:layout_alignStart="@+id/inputUsername"
        android:layout_below="@+id/inputUsername"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/inputPassword"
        android:textColorHint="@color/colorTextWhite"
        android:textColor="@color/colorPrimaryLighter"

        android:layout_alignRight="@+id/inputUsername"
        android:layout_alignEnd="@+id/inputUsername"
    />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bLogin"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_shape"
        android:layout_below="@+id/inputPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/txtRegister"
        android:textAllCaps="false"
        android:textColor="@color/colorTextWhite"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtWebview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="Go to webview"
        android:textAllCaps="false"
        android:textColor="@color/colorTextWhite"
        android:textSize="14sp"
        android:textStyle="bold" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:text="@string/trademark"
    android:textSize="12sp" />

<ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="60dp"
    app:srcCompat="@drawable/possum"
    android:layout_above="@+id/textView2"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/pozzum"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
